Fix toggle sidebar too high position

--- a/mean/public/assets/less/_style.less
+++ b/mean/public/assets/less/_style.less
@@ -27,6 +27,17 @@
   margin-top: 25px;
 }
 
+/* Header ======================================== */
+#header_main .uk-navbar .uk-navbar-nav > li > a {
+  height: 2px;
+}
+
+@media (max-width: 767px) {
+  #header_main #sSwitch_primary {
+    padding: 12px 0 !important;
+  }
+}
+
 /* Homepage ======================================== */
 .course-title {
   font-size: 1.05rem;
